<resources>
    <string name="app_name">Persistence</string>
    <string name="memoria_interna">Memória Interna</string>
    <string name="memoria_externa_priv">Memória Externa Privada</string>
    <string name="memoria_externa_pub">Memória Externa Pública</string>
    <string name="salvar_label">Salvar</string>
    <string name="ler_label">Ler</string>
    <string name="message_permission_granted">Permissão concedida</string>
    <string name="message_permission_denied">Permissão negada</string>
    <string name="message_permission_requested">Você tem que habilitar essa permissão para ler ou salvar o arquivo</string>

    <string name="pref_city" translatable="false">city</string>
    <string name="pref_messages" translatable="false">mensagens</string>
    <string name="pref_social_network" translatable="false">rede_social</string>
    <string name="title_city">Cidade</string>
    <string name="pref_city_default">Recife</string>
    <string name="title_messages">Receber mensagens</string>
    <string name="summary_messages">Aplicação deve receber mensagens</string>
    <string name="title_social_network">Rede social</string>
    <string name="pref_social_network_default">gplus</string>
    <string name="open_pref_label">Abrir preferencias</string>
    <string name="read_pref_label">Ler preferencias</string>
    <string-array name="social_networks">
        <item>Google +</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Instagram</item>
        <item>Linkedin</item>
    </string-array>
    <string-array name="social_networks_values">
        <item>gplus</item>
        <item>fb</item>
        <item>twitter</item>
        <item>ig</item>
        <item>linkedin</item>
    </string-array>

</resources>